# ADRC-Project-InternetConnectivity

./: CMakeLists.txt  README.md  main.c  menus.c  menus.h
lib/Algorithm_modules/: Commercialconnected.c  Commercialconnected.h  Connected.c  Connected.h  FastestDistrib.c  FastestDistrib.h  FindCycles.c  FindCycles.h  PathLength.c  PathLength.h  PathType.c  PathType.h  Search.c  Search.h  SearchCommercial.c  SearchCommercial.h  biconnected.c  biconnected.h  printFile.c  printFile.h
lib/Assets/: articulation_points_example.txt  biconnected.txt  biconnected2.txt  cicle.txt  cyclictest.txt  ex.txt  lengths_test1.txt  line.txt  net.txt  path_type_fails.txt  path_type_simple.txt  pdf_example.txt  scratch.txt  speed_biconnected.txt
lib/Assets/FicheirosOral/: AllProvidersShorter.txt  PeersAcross.txt  ProvidersLength.txt
lib/Fork_module/: fork.c  fork.h
lib/Graph_module/: Commercialconnected.c  Commercialconnected.h  Heap.c  Heap.h  ISPs.c  ISPs.h  Search.c  Search.h  SearchCommercial.c  SearchCommercial.h  Stacks.c  Stacks.h  graph.c  graph.h
lib/Init_module/: init.c
